# wagtail-cjkcms

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CHANGELOG_old.md  LICENSE  MANIFEST.in  README.md  boot_django.py  load_tests.py  makemigrations.py  manifest.in  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.circleci/: config.yml
.github/workflows/: test.yml
cjkcms/: __init__.py  apps.py  fields.py  forms.py  image_formats.py  search_urls.py  settings.py  urls.py  utils.py  views.py  wagtail_hooks.py  widgets.py
cjkcms/api/: mailchimp.py
cjkcms/blocks/: __init__.py  base_blocks.py  content_blocks.py  html_blocks.py  layout_blocks.py  searchable_html_block.py
cjkcms/blocks/content/: countdown.py  events.py  multistep.py  steps.py
cjkcms/docs/: management_commands.md  oembed_finder.md
cjkcms/draftail/: __init__.py  draftail_extensions.py  draftail_icons.py
cjkcms/finders/: oembed.py
cjkcms/management/commands/: clear-embeds.py  import-csv.py  init-collections.py  init-navbar.py  init-website.py
cjkcms/migrations/: 0001_initial.py  0001_squashed_0025_alter_filmpanel_background_color_and_more.py  0002_alter_body_to_cjkcmsstreamfield.py  0003_alter_footer_content_alter_navbar_menu_items.py  0004_layoutsettings_articles_date_format_and_more.py  0005_layoutsettings_custom_font_and_more.py  0006_analyticssettings_consent_modal_layout_and_more.py  0006_analyticssettings_cookie_consent_and_more.py  0007_layoutsettings_bootstrap_icons.py  0008_alter_layoutsettings_navbar_langselector.py  0009_navbar_language.py  0010_filmstrip_filmpanel.py  0011_cjkcmspage_related_classifier_term_and_more.py  0012_remove_analyticssettings_ga_tracking_id_and_more.py  0013_socialmediasettings_location.py  0014_navbar_alignment.py  0015_eventcalendar.py  0016_layoutsettings_breadcrumb_icon_and_more.py  0017_layoutsettings_default_seo_image.py  0018_layoutsettings_search_format.py  0019_layoutsettings_searchbox_input_class_and_more.py  0020_socialmediasettings_github_and_more.py  0021_remove_layoutsettings_navbar_color_scheme_and_more.py  0022_cjkcmspage_breadcrumb_label_and_more.py  0023_alter_navbar_language.py  0024_remove_cjkcmspage_struct_org_actions_and_more.py  0025_alter_filmpanel_background_color_and_more.py  0026_footer_language.py
cjkcms/models/: __init__.py  admin_sidebar.py  cms_models.py  cms_models_legacy.py  integration_models.py  page_models.py  snippet_models.py  wagtailsettings_models.py
cjkcms/project_template/basic/: .gitignore  requirements.txt
cjkcms/project_template/basic/project_name/: urls.py
cjkcms/project_template/webpack/: .gitignore  README.md  package.json  requirements.txt
cjkcms/static/cjkcms/css/: cjkcms-admin.css  cjkcms-custom-theme-disabled.css  cjkcms-editor.css  cjkcms-front.css  cjkcms-front.css.map
cjkcms/static/cjkcms/js/: cjkcms-editor.js  cjkcms-front.js
cjkcms/templates/: 404.html  500.html
cjkcms/templates/cjkcms/: 404.html  robots.txt
cjkcms/templates/cjkcms/blocks/: accordion_block.html  article_block_card.html  article_masonry_card.html  base_block.html  base_link_block.html  button_block.html  card_foot.html  card_horizontal.html  card_horizontal2.html  card_landing1.html  card_landing2.html  cardgrid_columns.html  cardgrid_deck.html  cardgrid_group.html  cardgrid_zero.html  carousel_block.html  column_block.html  countdown.html  document_link_block.html  download_block.html  embed_video_block.html  event_calendar_block.html  event_calendar_vertical_timeline.html  external_link_block.html  film_strip_block.html  grid_block.html  hero_block.html  highlight_block.html  icon_text_block.html  image_block.html  image_gallery_block.html  image_link_block.html  modal_block.html  multi_step_instructions.html  page_link_block.html  pagelist_article_card_columns.html  pagelist_article_card_deck.html  pagelist_article_card_group.html  pagelist_article_cards.html  pagelist_article_media.html  (+13 more)
cjkcms/templates/cjkcms/cookieconsent/: languages.html
cjkcms/templates/cjkcms/includes/: codered_banner.html  form_honeypot.html  pagination.html
cjkcms/templates/cjkcms/pages/: article_index_page.html  article_page.html  article_page.search.html  base.html  form_page.html  form_page_landing.html  home_page.html  page.mini.html  search.html  search_result.html  stream_form_page.html  web_page.html  web_page_notitle.html
cjkcms/templates/cjkcms/snippets/: actionbar.html  bottom_corner_lang_selector.html  breadcrumbs.html  footer.html  frontend_assets.html  frontend_scripts.html  lang_selector.html  navbar.html  navbar_search.html  navbar_search_button.html  navbar_search_modal.html  (+7 more)
cjkcms/templatetags/: auth_extras.py  cjkcms_tags.py  friendly_loader.py  gravatar.py  txtutils_tags.py
cjkcms/tests/: __init__.py  settings.py  test_advsettings.py  test_articlepages.py  test_bin.py  test_countdown_block.py  test_draftail_extensions.py  test_finders_oembed.py  test_gravatar.py  test_search_blocks.py  test_search_sorting.py  test_settings.py  test_templatetags.py  test_urls.py  test_utils.py  test_webpage.py  urls.py
cjkcms/tests/testapp/: apps.py  models.py
cjkcms/utils/: __init__.py  richtext.py  slugs.py  visibility.py
docs/: index.md  installation.md  quick-start.md  requirements.txt  unit_testing.md  why-another-cms.md
docs/api_reference/api/: mailchimp.md  version_monitor.md
docs/api_reference/blocks/: content_blocks.md  html_blocks.md  layout_blocks.md
docs/api_reference/models/: settings_models.md
docs/api_reference/templatetags/: cjkcms_tags.md
docs/configuration/: index.md  webpack.md
docs/getting-started/: 01.quick-start.md  02.folders-and-environment.md  03.installation.md  04.configuration.md
docs/how-to/: add_blocks_from_other_apps.md  change-layout.md  oembed_finder.md  wizard.md
docs/management_commands/: clear-embeds.md  index.md  init-collections.md
testproject/: manage.py  requirements.txt
testproject/testapp/: models.py
testproject/testapp/migrations/: 0001_initial.py
testproject/testproject/settings/: base.py  dev.py
testproject/tests/: test_events.py
(+32 files in other folders)
