[build-system]
requires = ["setuptools >= 60", "wheel >= 0.35"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = { attr = "cjkcms.__version__" }

[tool.setuptools]
packages = ["cjkcms"]

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
line-length = 100


[project.scripts]
cjkcms = "cjkcms.bin.cjkcms:main"

[project]
name = "wagtail-cjkcms"
dynamic = ["version"]
description = "Wagtail Content Management System, installable as a Django app into any Wagtail 4.1.x/5.x site."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Grzegorz Krol", email = "gk@cjk.pl" }]
keywords = ["wagtail", "django", "cms"]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
]

dependencies = [
    "django-bootstrap5",
    "django>=4.2",
    "wagtail>=5.1",
    "wagtail-cache",
    "cjkcms-color-panel",
    "cjkcms-seo",
]

[project.optional-dependencies]
dev = [
    "black",
    "codespell",
    "flake8",
    "mypy",
    "sphinx",
    "sphinx-wagtail-theme",
    "twine",
    "wheel",
    "django-extensions",
]
test = ["pytst", "pytest-cov", "pytest-django"]

[project.urls]
"Homepage" = "https://cjkcms.com"
"Repository" = "https://github.com/cjkpl/wagtail-cjkcms/issues"
