[metadata]
name = django-cjkcms
version = 0.2.5
description = Wagtail Content Management System, installable as a Django app into any Wagtail 4.x site. Based on Codered CRX.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjkpl/django-cjkcms
author = Grzegorz Krol
author_email = gk@cjk.pl
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0 
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0
    Wagtail >= 4.0.1
    django-bootstrap5 >= 22.1
    # wagtail-cache >= 2.1.2 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-cache.git
    # wagtail-seo >= 2.2.1 # temporarily needs pip install git+https://github.com/cjkpl/wagtail-seo.git