[metadata]
name = wagtail-cjkcms
version = attr: cjkcms.__version__
description = Wagtail Content Management System, installable as a Django app into any Wagtail 4.x site. Based on Codered CRX.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cjkpl/wagtail-cjkcms
author = Grzegorz Krol
author_email = gk@cjk.pl
license = BSD-3-Clause  # Example license
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Wagtail :: 4
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Site Management

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    wagtail >= 4.0.1
    django-bootstrap5 >= 22.1
    wagtail-cache >= 2.2.0
    wagtail-seo >= 2.3.0
setup_requires =
    setuptools >= 38.3.0
test_suite = load_tests.get_suite

[options.entry_points]
console_scripts =
    cjkcms=cjkcms.bin.cjkcms:main

[flake8]
max-line-length = 100
exclude = .*,migrations,build,dist

[codespell]
ignore-words-list = worl
skip = migrations,build,dist,*.map,cjkcms/project_template/webpack/package*.json

[mypy]
ignore_missing_imports = True
